Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24674

When the kit is changed to be an Android one then it will add an entry for ANDROID_ABIS into the pro file even if it is not needed

XMLWordPrintable

    • Android

      When the kit is changed to be an Android one then it will add an entry for ANDROID_ABIS into the pro file even if it is not needed. This can be added even if the ANDROID_ABIs already contain the one specified (which is the one selected in the build settings). But it should not be adding this to the .pro file, it should be in the .pro.user file instead.

        For Gerrit Dashboard: QTCREATORBUG-24674
        # Subject Branch Project Status CR V

            assam Assam Boudjelthia
            andysh Andy Shaw
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes